<resources>
    <string name="app_name">Popular movies</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_favourite">Favourite</string>
    <string name="error_message">Ooops, sorry, error… Please try again</string>
    <string name="once_upon">Once upon a time in America</string>
    <string name="movie_poster">Movie poster</string>
    <string name="settings">Settings</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="add_favourite">Add/remove favourite</string>

    <string name="release_date">Release date: 2018-00-00</string>
    <string name="vote_average">Vote average: 15!</string>
    <string name="plot">Very interesting movie</string>
</resources>
